--- a/CSS/index-CSS.css
+++ b/CSS/index-CSS.css
@@ -1,4 +1,14 @@
+        
+        body {
+            height: 5000px;
+            padding-top: 56px;
+        }
 
+        .navbar-nav > li{
+            padding-left:30px;
+            padding-right:30px;
+        }
+        
         .container {
             margin-top: 50px;
         }
