--- a/CSS/index-CSS.css
+++ b/CSS/index-CSS.css
@@ -38,3 +38,33 @@
             color: #555;
             margin-bottom: 30px;
         }
+
+/* content */
+#image{
+            position:relative;
+            width:100%;
+            min-height:100vh;
+            background:url(Images/19128ngochild.jpg);
+            background-size: cover;
+        }
+        section:before
+        {
+            content:'';
+            position: absolute;
+            top:0;
+            left:0;
+            width: 100%;
+            height: 100%;
+            background: url(Images/splashigshape-01.png);
+            background-size: cover;
+            background-position:center;
+           mix-blend-mode: screen;
+        }
+        .box{
+            display: flex;
+        }
+        #image{
+           justify-items: ;
+        }
+/* //content */
+
