--- a/CSS/index-CSS.css
+++ b/CSS/index-CSS.css
@@ -41,25 +41,25 @@
 
 /* content */
 #image{
-            position:relative;
-            width:100%;
-            min-height:100vh;
-            background:url(Images/19128ngochild.jpg);
-            background-size: cover;
-        }
-        section:before
-        {
-            content:'';
-            position: absolute;
-            top:0;
-            left:0;
-            width: 100%;
-            height: 100%;
-            background: url(Images/splashigshape-01.png);
-            background-size: cover;
-            background-position:center;
-           mix-blend-mode: screen;
-        }
+    position:relative;
+    width:100%;
+    min-height:100vh;
+    background:url(image/19128ngochild.jpg);
+    background-size: cover;
+}
+section:before
+{
+    content:'';
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background: url(image/splashigshape-01.png);
+    background-size: cover;
+    background-position:center;
+   mix-blend-mode: screen;
+}
        
 /* //content */
 
