--- a/CSS/index-CSS.css
+++ b/CSS/index-CSS.css
@@ -44,7 +44,7 @@
     position:relative;
     width:100%;
     min-height:100vh;
-    background:url(image/19128ngochild.jpg);
+    background:url(Images/splashigshape-01.png);
     background-size: cover;
 }
 section:before
