--- a/CSS/index-CSS.css
+++ b/CSS/index-CSS.css
@@ -44,7 +44,7 @@
     position:relative;
     width:100%;
     min-height:100vh;
-    background:url(Images/splashigshape-01.png);
+    background:url(Images/19128ngochild.jpg);
     background-size: cover;
 }
 section:before
@@ -55,7 +55,7 @@ section:before
     left:0;
     width: 100%;
     height: 100%;
-    background: url(image/splashigshape-01.png);
+    background: url(Images/splashigshape-01.png);
     background-size: cover;
     background-position:center;
    mix-blend-mode: screen;
