--- a/CSS/index-CSS.css
+++ b/CSS/index-CSS.css
@@ -1,7 +1,7 @@
-        
         body {
-            height: 5000px;
-            padding-top: 56px;
+/*             height: 5000px; */
+                padding:0; margin:0; height:100%;
+/*             padding-top: 56px; */
         }
 
         .navbar-nav > li{
@@ -39,6 +39,8 @@
             margin-bottom: 30px;
         }
 
+/* footer */
+footer{position: absolute; bottom: 0; left: 0; right: 0;}
 /* content */
 #image{
     position:relative;
