--- a/CSS/index-CSS.css
+++ b/CSS/index-CSS.css
@@ -1,7 +1,7 @@
         body {
-/*             height: 5000px; */
-                padding:0; margin:0; height:100%;
-/*             padding-top: 56px; */
+            height: 5000px; */
+/*                 padding:0; margin:0; height:100%; */
+           padding-top: 56px;
         }
 
         .navbar-nav > li{
