--- a/CSS/index-CSS.css
+++ b/CSS/index-CSS.css
@@ -1,7 +1,9 @@
         body {
-            height: 5000px; */
-/*                 padding:0; margin:0; height:100%; */
-           padding-top: 56px;
+            /* height: 5000px; 
+           padding-top:56px; */
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
 
         .navbar-nav > li{
@@ -9,6 +11,9 @@
             padding-right:10px;
         }
         
+        .carousel-inner{
+            margin-top: 6rem;
+        }
         .container {
             margin-top: 50px;
         }
@@ -39,6 +44,11 @@
             margin-bottom: 30px;
         }
 
+
+        footer{
+            margin-top: auto;
+        }
+        
 
 /* content */
 #image{
